Fix img stretching horizontally

--- a/src/pages/Index.css
+++ b/src/pages/Index.css
@@ -224,8 +224,7 @@ Sections - Works
 }
 
 .page-index .works li > .img .static {
-  display: block;
-  margin: 0 auto;
+  align-self: center;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
